--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,19 @@
 spring:
   datasource:
-         url: jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=round&autoReconnect=true
-         username: root
-         password: root
-  redis:
-     host: localhost
-     port: 6379
-     password:
+     driverClassName: com.mysql.jdbc.Driver
+     url: jdbc:mysql://127.0.0.1:3306/authserver?characterEncoding=utf8
+     username: root
+     password: root
+  thymeleaf:
+      cache: false
+      mode: HTML5
+      content-type: text/html
+  jpa:
+    hibernate:
+          ddl-auto: update
+    show-sql: true
+logging:
+  level:
+    org:
+      springframework:
+             security: INFO
